RocketTE(WebEdition)/bzwapps/sample/AWS Deployment/P2P Network/config/gateway-admin-console.yaml
# Gateway exposes HTTP port 8543 of pod 0 in blue group to HTTP port 8543 of Ingress
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-rtew-admin-blue-0
  namespace: rtew
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8543
      name: rtew-admin-blue-0
      protocol: HTTP
    hosts:
    - "*"
---
# VirtualService for HTTP port 8543 of pod 0 in blue group
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-rtew-admin-blue-0
  namespace: rtew
spec:
  hosts:
  - "*"
  gateways:
  - gw-rtew-admin-blue-0
  http:
  - match:
    - uri:
        prefix: ''
    route:
    - destination:
        host: ss-rtew-blue-0.svc-rtew-headless.rtew.svc.cluster.local
        port:
          number: 8543
---
# Gateway exposes HTTP port 8543 of pod 1 in blue group to HTTP port 8545 of Ingress
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-rtew-admin-blue-1
  namespace: rtew
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8545
      name: rtew-admin-blue-1
      protocol: HTTP
    hosts:
    - "*"
---
# VirtualService for HTTP port 8543 of pod 1 in blue group
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-rtew-admin-blue-1
  namespace: rtew
spec:
  hosts:
  - "*"
  gateways:
  - gw-rtew-admin-blue-1
  http:
  - match:
    - uri:
        prefix: ''
    route:
    - destination:
        host: ss-rtew-blue-1.svc-rtew-headless.rtew.svc.cluster.local
        port:
          number: 8543
---
# Gateway exposes HTTP port 8543 of pod 0 in green group to HTTP port 8547 of Ingress
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-rtew-admin-green-0
  namespace: rtew
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8547
      name: rtew-admin-green-0
      protocol: HTTP
    hosts:
    - "*"
---
# VirtualService for HTTP port 8543 of pod 0 in green group
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-rtew-admin-green-0
  namespace: rtew
spec:
  hosts:
  - "*"
  gateways:
  - gw-rtew-admin-green-0
  http:
  - match:
    - uri:
        prefix: ''
    route:
    - destination:
        host: ss-rtew-green-0.svc-rtew-headless.rtew.svc.cluster.local
        port:
          number: 8543
---
# Gateway exposes HTTP port 8543 of pod 1 in green group to HTTP port 8549 of Ingress
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-rtew-admin-green-1
  namespace: rtew
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8549
      name: rtew-admin-green-1
      protocol: HTTP
    hosts:
    - "*"
---
# VirtualService for HTTP port 8543 of pod 1 in green group
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-rtew-admin-green-1
  namespace: rtew
spec:
  hosts:
  - "*"
  gateways:
  - gw-rtew-admin-green-1
  http:
  - match:
    - uri:
        prefix: ''
    route:
    - destination:
        host: ss-rtew-green-1.svc-rtew-headless.rtew.svc.cluster.local
        port:
          number: 8543
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-rtew-mtls
  namespace: rtew
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
