RocketTE(WebEdition)/bzwapps/sample/AWS Deployment/P2P Network/config/service-entry.yaml
# Service entry registers HTTP port 8543 of pod 0 in blue group as a service
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-rtew-blue-0
  namespace: rtew
spec:
  hosts:
    - ss-rtew-blue-0.svc-rtew-headless.rtew.svc.cluster.local
  ports:
    - number: 8543
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: ss-rtew-blue-0.svc-rtew-headless.rtew.svc.cluster.local
      ports:
        http: 8543
---
# Service entry registers HTTP port 8543 of pod 1 in blue group as a service
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-rtew-blue-1
  namespace: rtew
spec:
  hosts:
    - ss-rtew-blue-1.svc-rtew-headless.rtew.svc.cluster.local
  ports:
    - number: 8543
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: ss-rtew-blue-1.svc-rtew-headless.rtew.svc.cluster.local
      ports:
        http: 8543
---
# Service entry registers HTTP port 8543 of pod 0 in green group as a service
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-rtew-green-0
  namespace: rtew
spec:
  hosts:
    - ss-rtew-green-0.svc-rtew-headless.rtew.svc.cluster.local
  ports:
    - number: 8543
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: ss-rtew-green-0.svc-rtew-headless.rtew.svc.cluster.local
      ports:
        http: 8543
---
# Service entry registers HTTP port 8543 of pod 1 in green group as a service
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: se-rtew-green-1
  namespace: rtew
spec:
  hosts:
    - ss-rtew-green-1.svc-rtew-headless.rtew.svc.cluster.local
  ports:
    - number: 8543
      name: http
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: ss-rtew-green-1.svc-rtew-headless.rtew.svc.cluster.local
      ports:
        http: 8543
