RocketTE(WebEdition)/bzwapps/sample/AWS Deployment/P2P Network/config/istio-auth.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "default"
  namespace: rtew
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: tcp-policy
  namespace: rtew
spec:
  selector:
    matchLabels:
      app: rtew
  action: ALLOW
  rules:
  - to:
    - operation:
        ports: ["8543", "8643"]
